src/styles/item.css
.container{
  display: flex;
  justify-content: center;
}

.itemContainer{
  max-width: 1000px;
  align-self: center;
  display: grid;
  
  grid-template-columns: repeat(2,1fr);
  grid-template-rows: 1fr;

  
}
.itemPicturesContainer{
  
  grid-column: 1/2;
  
  height: 500px;
  width: 300px;
  border-radius: 10px;
  overflow:hidden;
  margin: 0 auto;
}

.itemPicture{
  
  
  max-height: 500px;
  max-width: 300px;
  z-index: 1;
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
  
}


.containerArrow{
  display: flex;
  justify-content: space-between;
  z-index: 2;
  position: relative;
  top: 50%;

}
.leftArrow, .rightArrow{
  border: none;
  background-color: bisque;
  

}
.leftArrow:hover, .rightArrow:hover{
  cursor: pointer;
}



.dotContainer{
  display: flex;
  justify-content: center;
  column-gap: 10px;
  position: relative;
  
  top:85%;
  z-index: 2;

  
}

.dot{
  height: 8px;
  width: 6px;
  border: 1px solid grey;
  border-radius: 10px;
  background-color: white;
  
}

.dot:hover{
  cursor: pointer;
}

.itemInfo{
  margin-top: 60px;
  align-items: center;

  width: 400px;
  font-family:'Times New Roman', Times, serif;
  font-size: large;
  grid-column: 2/3;
  color: rgb(94, 94, 94);
  
}

.itemInfo > div{
  text-align: center;

}

.itemTitle{
  font-size: 26px;
  font-weight: 100;
}

.selectedColor{
  font-size: 14px;
}
.itemColorSelect{
  display: flex;
  flex-direction: row;
  column-gap: 4px;
  justify-content: center;
}
.colorChoice{
  user-select: none;
  margin-right: 4px;
  height:20px;
  width: 20px;
  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
  
  transition: all 0.3s, transform 0.3s;
  transform: rotate(0deg);
  
  
}
.colorChoiceContainer{
  height: 20px;
  width: 20px;
}
.colorChoice:hover{
  cursor: pointer;
}

.itemPicturesContainer img {
  
  transform-origin: center;
  object-fit: cover;
  height: 100%;
  width: 100%;
  transition: all 0.1s ease-out;
}
.itemPicturesContainer:hover img {
  cursor:crosshair;
}




  

